src/test/VoidFunction/VoidFunction.expected
error: VoidFunction.panda:1:1: functions must have a return type
1 error
