src/test/VoidFunction/VoidFunction.panda
function x() {
}

Console.writeLine(x())